Logic implemented in GUI of 122 dir